samples/_failures_safe/1761269371_f264c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9de7c96.c: In function ‘main’:
./samples/SAFE/__tmp_f9de7c96.c:152:24: error: expected ‘)’ at end of input
  152 |     if (!read_matrix(&b
      |                     ~  ^
      |                        )
./samples/SAFE/__tmp_f9de7c96.c:152:5: error: expected declaration or statement at end of input
  152 |     if (!read_matrix(&b
      |     ^~
